--- a/src/components/pages/homePage/homePage.scss
+++ b/src/components/pages/homePage/homePage.scss
@@ -8,7 +8,7 @@
   &__searchBlock {
     height: 36rem;
     padding: 5rem;
-    padding-right: 7.5rem;
+    padding-right: 7.4rem;
     background-color: $darkBlue;
     background-image: url('../../../resources/img/white-walker.jpg');
     h1 {
@@ -22,7 +22,7 @@
       color: #FFFFFF;
     }
     form {
-      margin-top: 10rem;
+      margin-top: 12rem;
     }
     &_input {
       width: 100%;
@@ -37,7 +37,7 @@
     }
     &_submit {
       position: absolute;
-      right: 7.5rem;
+      right: 7.4rem;
       width: 12rem;
       padding-top: 1rem;
       padding-bottom: 1rem;
@@ -57,4 +57,56 @@
       }
     }
   }
+  &__filmsSlider {
+    .slick-slider {
+      display: flex;
+    }
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+    padding-top: 3rem;
+    padding-left: 5rem;
+    padding-right: 7.4rem;
+    h2 {
+      font-weight: 600;
+      font-size: 2.4rem;
+    }
+    .slick-prev {
+      &::before {
+        color:black;
+      }
+    }
+    .slick-next {
+      &::before {
+        color:black;
+      }
+    }
+    .slick-track {
+      display: flex;
+      column-gap: 1rem;
+    }
+    &_cards {
+      img {
+        width: 100%;
+      }
+      a {
+        position: relative;
+        bottom: 2rem;
+        font-weight: 700;
+        font-size: 1.6rem;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+    &_progress {
+      width: 25%;
+      height: 25%;
+      position: relative;
+      bottom: 3rem;
+      background-color: black;
+      border-radius: 50%;
+    }
+  }
 }
+
