--- a/src/components/appHeader/appHeader.scss
+++ b/src/components/appHeader/appHeader.scss
@@ -33,6 +33,7 @@
       padding-bottom: 0.9rem;
       padding-left: 2.4rem;
       padding-right: 2.4rem;
+      border-radius: 2rem;
     }
     li:hover {
       cursor: pointer;
