--- a/src/components/pages/homePage/homePage.scss
+++ b/src/components/pages/homePage/homePage.scss
@@ -108,5 +108,34 @@
       border-radius: 50%;
     }
   }
+  &__mostPopular {
+    padding-top: 2rem;
+    padding-left: 5rem;
+    padding-right: 7.4rem;
+    h2 {
+      font-weight: 600;
+      font-size: 2.4rem;
+    }
+    &_grid {
+      padding-top: 2rem;
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+      gap: 3rem;
+    }
+    &_cards {
+      img {
+        width: 100%;
+        height: 90%;
+      }
+      a {
+        font-weight: 700;
+        font-size: 1.6rem;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
 }
 
