--- a/src/components/pages/homePage/homePage.scss
+++ b/src/components/pages/homePage/homePage.scss
@@ -137,5 +137,20 @@
       }
     }
   }
+  &__about {
+    padding-left: 5rem;
+    padding-right: 7.4rem;
+    margin-bottom: 4rem;
+    h2 {
+      margin-top: 1.5rem;
+      margin-bottom: 1rem;
+      font-weight: 600;
+      font-size: 2.4rem;
+    }
+    p {
+      font-weight: 400;
+      font-size: 1.6rem;
+    }
+  }
 }
 
