--- a/src/components/appFooter/appFooter.scss
+++ b/src/components/appFooter/appFooter.scss
@@ -20,3 +20,26 @@
     column-gap: 1.6rem;
   }
 }
+
+@media (max-width: 767px) {
+  .footer {
+    &__flex {
+      flex-direction: column;
+      align-items: center;
+      row-gap: 0.6rem;
+      padding-top: 1.2rem;
+      padding-bottom: 1.2rem;
+      padding-left: 0;
+      padding-right: 0;
+      font-size: 1.4rem;
+    }
+    &__socialContainer {
+      padding-top: 2.6rem;
+      padding-bottom: 2.6rem;
+      img {
+        width: 2rem;
+        height: 2rem;
+      }
+    }
+  }
+}
