--- a/src/components/pages/filmsPage/filmsPage.scss
+++ b/src/components/pages/filmsPage/filmsPage.scss
@@ -127,3 +127,37 @@
     }
   }
 }
+
+@media (max-width: 1439px) {
+  .filmsPage {
+    &__categories {
+      ul {
+        font-size: 1.4rem;
+        padding: 1rem;
+      }
+    }
+    &__grid {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
+
+@media (max-width: 1023px) {
+  .filmsPage {
+    &__categories {
+      width: 30%;
+      padding-left: 2rem;
+    }
+    &__filmsContainer {
+      padding-right: 2rem;
+      width: 70%;
+    }
+    &__grid {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  
+}
