--- a/src/components/pages/filmsPage/filmsPage.scss
+++ b/src/components/pages/filmsPage/filmsPage.scss
@@ -1,3 +1,5 @@
+@import '../../../style/variables.scss';
+
 .filmsPage {
   &__container {
     display: flex;
@@ -32,6 +34,9 @@
         text-decoration: underline;
       }
     }
+  }
+  &__burgerBtn {
+    display: none;
   }
   &__filmsContainer {
     display: flex;
@@ -159,5 +164,66 @@
 }
 
 @media (max-width: 767px) {
-  
+  .filmsPage {
+    &__container {
+      flex-direction: column;
+    }
+    &__categories {
+      position: fixed;
+      z-index: 1;
+      width: 100vw;
+      height: 100vh;
+      padding-left: 6rem;
+      margin-top: 8rem;
+      transform: translateX(-100%);
+      transition: all 0.4s;
+      background-color: #063158;
+      color: #FFFFFF;
+      &.active {
+        transform: translateX(0);
+      }
+      ul {
+        border: 0;
+        padding: 0;
+        box-shadow: none;
+        color: #979494;
+        .genre__active {
+          color: #FFFFFF;
+        }
+      }
+    }
+    &__burgerBtn {
+      position: absolute;
+      left: 2rem;
+      top: 10.5rem;
+      z-index: 1;
+      display: block;
+      width: 1.8rem;
+      height: 1.2rem;
+      border: 0;
+      background-image: url('../../../resources/img/burger-black.svg');
+      background-color: #FFFFFF;
+      &.active {
+        position: fixed;
+        width: 1.4rem;
+        height: 1.4rem;
+        background-image: url('../../../resources/img/close.svg');
+        background-color: #063158;
+      }
+    }
+    &__filmsContainer {
+      width: 100%;
+      margin: 0;
+      margin-top: 8.4rem;
+      padding-top: 1.5rem;
+      padding-left: 2rem;
+      h1 {
+        margin-left: 4rem;
+        font-size: 2rem;
+      }
+    }
+    &__grid {
+      grid-template-columns: 1fr;
+    }
+  }
 }
