--- a/src/components/pages/homePage/homePage.scss
+++ b/src/components/pages/homePage/homePage.scss
@@ -91,24 +91,33 @@
       column-gap: 1rem;
     }
     &_cards {
+      border: 1px solid #e3e3e3;
+      box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
+      border-radius: 1.5rem;
+      &:hover {
+        text-decoration: underline;
+      }
       img {
         width: 100%;
+        border-top-left-radius: 1.5rem;
+        border-top-right-radius: 1.5rem;
       }
-      a {
+      h3 {
         position: relative;
         bottom: 2rem;
+        margin-left: 3%;
+        margin-right: 3%;
         font-weight: 700;
         font-size: 1.5rem;
-        &:hover {
-          text-decoration: underline;
-        }
       }
     }
     &_progress {
-      width: 25%;
-      height: 25%;
+      width: 15%;
+      height: 15%;
       position: relative;
       bottom: 3rem;
+      margin-left: 3%;
+      margin-right: 3%;
     }
   }
   &__mostPopular {
@@ -127,16 +136,24 @@
       gap: 3rem;
     }
     &_cards {
+      border: 1px solid #e3e3e3;
+      box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
+      border-radius: 1.5rem;
+      &:hover {
+        text-decoration: underline;
+      }
       img {
         width: 100%;
         height: 90%;
+        border-top-left-radius: 1.5rem;
+        border-top-right-radius: 1.5rem;
       }
-      a {
+      h3 {
+        margin-top: 1rem;
+        margin-left: 3%;
+        margin-right: 3%;
         font-weight: 700;
         font-size: 1.6rem;
-        &:hover {
-          text-decoration: underline;
-        }
       }
     }
   }
