--- a/src/components/pages/seriesPage/seriesPage.scss
+++ b/src/components/pages/seriesPage/seriesPage.scss
@@ -68,6 +68,9 @@
     border: 1px solid #e3e3e3;
     border-radius: 1.2rem;
     box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
+    &:hover {
+      text-decoration: underline;
+    }
     img {
       background-image: url('../../../resources/img/noImg.jpg');
       width: 100%;
@@ -81,16 +84,14 @@
       bottom: 5%;
       margin-left: 3%;
     }
-    a {
+    h3 {
       position: relative;
       bottom: 3%;
       font-weight: 600;
       font-size: 1.6rem;
       height: 10%;
       margin-left: 3%;
-      &:hover {
-        text-decoration: underline;
-      }
+      margin-right: 3%;
     }
     p {
       position: relative;
