--- a/src/components/pages/searchPage/searchPage.scss
+++ b/src/components/pages/searchPage/searchPage.scss
@@ -50,13 +50,13 @@
     column-gap: 2rem;
   }
   &__types {
-    width: 13%;
+    width: 15%;
     h2 {
       padding: 2rem;
       border-top-left-radius: 1.2rem;
       border-top-right-radius: 1.2rem;
       font-weight: 600;
-      font-size: 1.8rem;
+      font-size: 1.6rem;
       background-color: $lightBlue;
       color: #FFFFFF;
     }
@@ -90,17 +90,17 @@
     display: none;
   }
   &__results {
-    width: 87%;
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
     h1 {
       font-weight: 600;
       font-size: 2.8rem;
     }
-    display: flex;
-    flex-direction: column;
-    row-gap: 2rem;
     a {
       display: flex;
-      height: 30rem;
+      min-height: 30rem;
       border: 1px solid #e3e3e3;
       border-radius: 1.2rem;
       box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
@@ -109,7 +109,7 @@
       }
       img {
         display: block;
-        height: 29.9rem;
+        min-height: 29.9rem;
         width: 19.9rem;
         border-top-left-radius: 1.2rem;
         border-bottom-left-radius: 1.2rem;
@@ -131,6 +131,127 @@
     }
     &_date {
       color: #4443436c;
+    }
+  }
+}
+
+@media (max-width: 1023px) {
+  .searchPage {
+    &__container {
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
+    &__form {
+      &_submit {
+        right: 2rem;
+      }
+    }
+    &__flexContainer {
+      column-gap: 1rem;
+    }
+    &__types {
+      width: 20%;
+    }
+    &__results {
+      width: 80%;
+      &_textBlock {
+        padding-left: 1rem;
+        padding-right: 1rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .searchPage {
+    &__container {
+      padding: 0;
+    }
+    &__form {
+      margin-top: 10rem;
+      margin-left: 5rem;
+      margin-right: 5rem;
+      &_input {
+        font-size: 1.4rem;
+        padding-left: 1rem;
+        padding-right: 3.5rem;
+      }
+      &_submit {
+        right: 2rem;
+        width: 6rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        font-size: 1.4rem;
+        border-radius: 2rem;
+      }
+    }
+    &__types {
+      position: fixed;
+      top: 8rem;
+      z-index: 1;
+      width: 100vw;
+      height: 100vh;
+      padding-left: 6rem;
+      margin-top: 0;
+      transform: translateX(-100%);
+      transition: all 0.4s;
+      background-color: #063158;
+      color: #FFFFFF;
+      &.active {
+        transform: translateX(0);
+      }
+      h2 {
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+        padding: 0;
+        background-color: transparent;
+        color: #FFFFFF;
+        font-size: 1.8rem;
+      }
+      ul {
+        border: 0;
+        padding: 0;
+        box-shadow: none;
+        color: #979494;
+        .type__active {
+          color: #FFFFFF;
+          text-decoration: underline;
+        }
+      }
+    }
+    &__burgerBtn {
+      position: absolute;
+      left: 2rem;
+      top: 11.1rem;
+      z-index: 1;
+      display: block;
+      width: 1.8rem;
+      height: 1.2rem;
+      border: 0;
+      background-image: url('../../../resources/img/burger-black.svg');
+      background-color: #FFFFFF;
+      &.active {
+        position: fixed;
+        width: 1.4rem;
+        height: 1.4rem;
+        background-image: url('../../../resources/img/close.svg');
+        background-color: #063158;
+      }
+    }
+    &__results {
+      width: 100%;
+      padding-left: 2rem;
+      padding-right: 2rem;
+      padding-bottom: 2rem;
+      a {
+        flex-direction: column;
+        img {
+          width: 100%;
+          height: auto;
+          border-bottom-left-radius: 0;
+          border-top-right-radius: 1.2rem;
+        }
+      }
     }
   }
 }
