add changing language in registrationPage

--- a/src/components/registrationForm/registrationForm.scss
+++ b/src/components/registrationForm/registrationForm.scss
@@ -23,6 +23,7 @@
       font-weight: 400;
       font-size: 2rem;
       line-height: 3.2rem;
+      color: #8d8c8c;
     }
     a{
       justify-self: center;
