--- a/src/components/appHeader/appHeader.scss
+++ b/src/components/appHeader/appHeader.scss
@@ -3,15 +3,22 @@
 .app {
   &__header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    height: 7rem;
-    padding-left: 5rem;
-    padding-right: 5rem;
     background-color: $darkBlue;
     color: #ffffff;
     &_burgerBtn {
       display: none;
+    }
+    &_container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 7rem;
+      max-width: 130rem;
+      width: 100%;
+      padding-left: 5rem;
+      padding-right: 5rem;
     }
   }
   &__title{
@@ -70,8 +77,10 @@
 @media (max-width: 1023px) {
   .app {
     &__header {
-      padding-left: 2rem;
-      padding-right: 2rem;
+      &_container {
+        padding-left: 2rem;
+        padding-right: 2rem;
+      }
     }
   }
 }
@@ -80,10 +89,6 @@
   .app {
     &__header {
       position: fixed;
-      height: 8rem;
-      width: 100vw;
-      padding-left: 2.4rem;
-      padding-right: 3.1rem;
       z-index: 2;
       &_burgerBtn {
         z-index: 1;
@@ -98,6 +103,12 @@
           height: 1.4rem;
           background-image: url('../../resources/img/close.svg');
         }
+      }
+      &_container {
+        width: 100vw;
+        height: 8rem;
+        padding-left: 2.4rem;
+        padding-right: 3.1rem;
       }
     }
     &__title{
