--- a/src/components/pages/filmsPage/filmsPage.scss
+++ b/src/components/pages/filmsPage/filmsPage.scss
@@ -8,6 +8,9 @@
 .filmsPage {
   &__container {
     display: flex;
+    max-width: 130rem;
+    margin-left: auto;
+    margin-right: auto;
   }
   &__categories {
     width: 20%;
@@ -59,7 +62,7 @@
   }
   &__grid {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
   }
   &__filmCard {
@@ -78,8 +81,8 @@
       border-top-right-radius: 1.2rem;
     }
     &_progress {
-      width: 20%;
-      height: 20%;
+      width: 5rem;
+      height: 5rem;
       position: relative;
       bottom: 5%;
       margin-left: 3%;
