--- a/src/components/pages/filmsPage/filmsPage.scss
+++ b/src/components/pages/filmsPage/filmsPage.scss
@@ -2,6 +2,8 @@
 
 .defaultImg {
   width: 100%;
+  height: calc((100vw - (100vw * 0.2) - 5rem - 2rem - (2rem * 3) - 5rem)/ 4 * 1.5);
+  max-height: 34rem;
   content: url(../../../resources/img/noImg.jpg);
 }
 
@@ -66,8 +68,7 @@
     gap: 2rem;
   }
   &__filmCard {
-    display: flex;
-    flex-direction: column;
+    position: relative;
     border: 1px solid #e3e3e3;
     border-radius: 1.2rem;
     box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
@@ -75,8 +76,11 @@
       text-decoration: underline;
     }
     img {
+      display: block;
       background-image: url('../../../resources/img/noImg.jpg');
       width: 100%;
+      height: calc((100vw - (100vw * 0.2) - 5rem - 2rem - (2rem * 3) - 5rem)/ 4 * 1.5);
+      max-height: 34rem;
       border-top-left-radius: 1.2rem;
       border-top-right-radius: 1.2rem;
     }
@@ -84,24 +88,24 @@
       width: 5rem;
       height: 5rem;
       position: relative;
-      bottom: 5%;
-      margin-left: 3%;
+      bottom: 2.5rem;
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
+    }
+    &_text {
+      position: relative;
+      bottom: 0.5rem;
     }
     h3 {
-      position: relative;
-      bottom: 3%;
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
       font-weight: 600;
       font-size: 1.6rem;
-      height: 10%;
-      margin-left: 3%;
-      margin-right: 3%;
     }
     p {
-      position: relative;
-      bottom: 3%;
-      margin-left: 3%;
-      margin-right: 3%;
-      padding-top: 1%;
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
+      padding-top: 0.5rem;
       font-weight: 400;
       font-size: 1.6rem;
       color: #4443436c;
@@ -152,13 +156,14 @@
         padding: 1rem;
       }
     }
-    &__grid {
-      grid-template-columns: repeat(3, 1fr);
-    }
   }
 }
 
 @media (max-width: 1023px) {
+  .defaultImg {
+    height: calc((100vw - (100vw * 0.2) - 2rem - 2rem - (2rem * 1) - 2rem)/ 2 * 1.5);
+    max-height: none;
+  }
   .filmsPage {
     &__categories {
       width: 30%;
@@ -171,10 +176,19 @@
     &__grid {
       grid-template-columns: repeat(2, 1fr);
     }
+    &__filmCard {
+      img {
+        height: calc((100vw - (100vw * 0.2) - 2rem - 2rem - (2rem * 1) - 2rem)/ 2 * 1.5);
+        max-height: none;
+      }
+    }
   }
 }
 
 @media (max-width: 767px) {
+  .defaultImg {
+    height: auto;
+  }
   .filmsPage {
     &__container {
       flex-direction: column;
@@ -235,6 +249,11 @@
     }
     &__grid {
       grid-template-columns: 1fr;
+    }
+    &__filmCard {
+      img {
+        height: auto;
+      }
     }
   }
 }
