--- a/src/components/pages/seriesPage/seriesPage.scss
+++ b/src/components/pages/seriesPage/seriesPage.scss
@@ -2,12 +2,17 @@
 
 .defaultImg {
   width: 100%;
+  height: calc((100vw - (100vw * 0.2) - 5rem - 2rem - (2rem * 3) - 5rem)/ 4 * 1.5);
+  max-height: 34rem;
   content: url(../../../resources/img/noImg.jpg);
 }
 
 .seriesPage {
   &__container {
     display: flex;
+    max-width: 130rem;
+    margin-left: auto;
+    margin-right: auto;
   }
   &__categories {
     width: 20%;
@@ -59,12 +64,11 @@
   }
   &__grid {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
   }
   &__serieCard {
-    display: flex;
-    flex-direction: column;
+    position: relative;
     border: 1px solid #e3e3e3;
     border-radius: 1.2rem;
     box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
@@ -72,32 +76,36 @@
       text-decoration: underline;
     }
     img {
+      display: block;
       background-image: url('../../../resources/img/noImg.jpg');
       width: 100%;
+      height: calc((100vw - (100vw * 0.2) - 5rem - 2rem - (2rem * 3) - 5rem)/ 4 * 1.5);
+      max-height: 34rem;
       border-top-left-radius: 1.2rem;
       border-top-right-radius: 1.2rem;
     }
     &_progress {
-      width: 20%;
-      height: 20%;
+      width: 5rem;
+      height: 5rem;
       position: relative;
-      bottom: 5%;
-      margin-left: 3%;
+      bottom: 2.5rem;
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
+    }
+    &_text {
+      position: relative;
+      bottom: 0.5rem;
     }
     h3 {
-      position: relative;
-      bottom: 3%;
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
       font-weight: 600;
       font-size: 1.6rem;
-      height: 10%;
-      margin-left: 3%;
-      margin-right: 3%;
     }
     p {
-      position: relative;
-      bottom: 3%;
-      margin-left: 3%;
-      padding-top: 1%;
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
+      padding-top: 0.5rem;
       font-weight: 400;
       font-size: 1.6rem;
       color: #4443436c;
@@ -148,13 +156,14 @@
         padding: 1rem;
       }
     }
-    &__grid {
-      grid-template-columns: repeat(3, 1fr);
-    }
   }
 }
 
 @media (max-width: 1023px) {
+  .defaultImg {
+    height: calc((100vw - (100vw * 0.2) - 2rem - 2rem - (2rem * 1) - 2rem)/ 2 * 1.5);
+    max-height: none;
+  }
   .seriesPage {
     &__categories {
       width: 30%;
@@ -167,10 +176,19 @@
     &__grid {
       grid-template-columns: repeat(2, 1fr);
     }
+    &__serieCard {
+      img {
+        height: calc((100vw - (100vw * 0.2) - 2rem - 2rem - (2rem * 1) - 2rem)/ 2 * 1.5);
+        max-height: none;
+      }
+    }
   }
 }
 
 @media (max-width: 767px) {
+  .defaultImg {
+    height: auto;
+  }
   .seriesPage {
     &__container {
       flex-direction: column;
@@ -231,6 +249,11 @@
     }
     &__grid {
       grid-template-columns: 1fr;
+    }
+    &__serieCard {
+      img {
+        height: auto;
+      }
     }
   }
 }
