--- a/src/components/pages/homePage/homePage.scss
+++ b/src/components/pages/homePage/homePage.scss
@@ -2,7 +2,8 @@
 
 .defaultImg {
   width: 100%;
-  height: 150%;
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
   content: url(../../../resources/img/noImg.jpg);
 }
 
@@ -107,6 +108,9 @@
       border-radius: 1.5rem;
       &:hover {
         cursor: pointer;
+      }
+      .defaultImg {
+        height: 30rem;
       }
       img {
         width: 100%;
