--- a/src/components/pages/insidePage/insidePage.scss
+++ b/src/components/pages/insidePage/insidePage.scss
@@ -1,7 +1,16 @@
+.defaultImg {
+  width: 34rem;
+  height: 100%;
+  content: url(../../../resources/img/noImg.jpg);
+}
+
 .insidePage {
   &__container {
     display: flex;
     flex-direction: column;
+    max-width: 130rem;
+    margin-left: auto;
+    margin-right: auto;
   }
   &__description {
     &_flex {
@@ -15,7 +24,6 @@
       padding-right: 5rem;
       &_textBlock {
         display: flex;
-        width: 100%;
         flex-direction: column;
         row-gap: 1rem;
       }
@@ -67,13 +75,10 @@
     background-size: cover;
   }
   &__actors {
-    display: flex;
-    flex-direction: column;
-    row-gap: 2rem;
     padding-top: 3rem;
     padding-bottom: 3rem;
     padding-left: 5rem;
-    padding-right: 5em;
+    padding-right: 5rem;
     h2 {
       font-weight: 600;
       font-size: 2.4rem;
@@ -81,28 +86,46 @@
     .slick-prev {
       &::before {
         color:black;
+        display: none;
       }
     }
     .slick-next {
       &::before {
         color:black;
+        display: none;
       }
     }
     .slick-track {
       display: flex;
-      column-gap: 3rem;
+      column-gap: 1rem;
+    }
+    .slick-dots {
+      position: relative;
+      bottom: 0;
+      padding-top: 1rem;
     }
     &_card {
+      height: 34rem;
+      margin-top: 2rem;
       border: 1px solid #e3e3e3;
       box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
       border-radius: 1.5rem;
+      .defaultImg {
+        width: 100%;
+        height: 30rem;
+        border-top-left-radius: 1.5rem;
+        border-top-right-radius: 1.5rem;
+      }
       img {
         width: 100%;
+        height: 30rem;
         border-top-left-radius: 1.5rem;
         border-top-right-radius: 1.5rem;
       }
       h3 {
-        margin: 3%;
+        margin-top: 1rem;
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
         font-weight: 700;
         font-size: 1.5rem;
       }
@@ -120,7 +143,11 @@
       margin-top: 2rem;
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      gap: 2rem;
+      gap: 1rem;
+      .defaultImg {
+        width: 100%;
+        height: 100%;
+      }
       img {
         display: block;
         width: 100%;
@@ -130,12 +157,10 @@
     }
   }
   &__recommendations {
-    display: flex;
-    flex-direction: column;
     padding-top: 3rem;
     padding-bottom: 3rem;
     padding-left: 5rem;
-    padding-right: 5em;
+    padding-right: 5rem;
     h2 {
       font-weight: 600;
       font-size: 2.4rem;
@@ -143,41 +168,64 @@
     .slick-prev {
       &::before {
         color:black;
+        display: none;
       }
     }
     .slick-next {
       &::before {
         color:black;
+        display: none;
       }
     }
     .slick-track {
       display: flex;
-      column-gap: 3rem;
-      margin-top: 2rem;
+      column-gap: 1rem;
+    }
+    .slick-dots {
+      position: relative;
+      bottom: 0;
+      padding-top: 1rem;
     }
     &_card {
+      height: 37rem;
+      margin-top: 2rem;
       border: 1px solid #e3e3e3;
       box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
       border-radius: 1.5rem;
       &:hover {
         cursor: pointer;
-        text-decoration: underline;
+      }
+      .defaultImg {
+        width: 20rem;
+        height: 30rem;
+        border-top-left-radius: 1.5rem;
+        border-top-right-radius: 1.5rem;
       }
       img {
-        width: 100%;
+        width: 20rem;
+        height: 30rem;
         border-top-left-radius: 1.5rem;
         border-top-right-radius: 1.5rem;
       }
       h3 {
-        margin: 3%;
+        width: 19rem;
+        margin-top: 1rem;
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
         font-weight: 700;
         font-size: 1.5rem;
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
   }
 }
 
 @media (max-width: 1023px) {
+  .defaultImg {
+    width: 40%;
+  }
   .insidePage {
     &__description {
       &_flex {
@@ -196,15 +244,8 @@
     &__actors {
       padding-top: 2rem;
       padding-bottom: 2rem;
-      padding-left: 3rem;
-      padding-right: 3em;
-      h2 {
-        position: relative;
-        left: -1rem;
-      }
-      .slick-track {
-        column-gap: 1rem;
-      }
+      padding-left: 2.5rem;
+      padding-right: 2.5rem;
     }
     &__backdropsGallery {
       margin-left: 2rem;
@@ -217,12 +258,8 @@
     &__recommendations {
       padding-top: 2rem;
       padding-bottom: 2rem;
-      padding-left: 3rem;
-      padding-right: 3rem;
-      h2 {
-        position: relative;
-        left: -1rem;
-      }
+      padding-left: 2.5rem;
+      padding-right: 2.5rem;
       .slick-track {
         column-gap: 1rem;
       }
@@ -236,6 +273,9 @@
 }
 
 @media (max-width: 767px) {
+  .defaultImg {
+    width: 100%;
+  }
   .insidePage {
     &__description {
       &_flex {
