--- a/src/components/pages/searchPage/searchPage.scss
+++ b/src/components/pages/searchPage/searchPage.scss
@@ -1,17 +1,29 @@
 @import '../../../style/variables.scss';
 
+.defaultImg {
+  min-height: 29.9rem;
+  width: 19.9rem;
+  border-top-left-radius: 1.2rem;
+  border-bottom-left-radius: 1.2rem;
+  content: url(../../../resources/img/noImg.jpg);
+}
+
 .searchPage {
   &__container {
+    max-width: 130rem;
     min-height: calc(100vh - 7rem - 8.1rem);
     display: flex;
     flex-direction: column;
     row-gap: 2rem;
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 2rem;
     padding-bottom: 2rem;
     padding-left: 5rem;
     padding-right: 5rem;
   }
   &__form {
+    position: relative;
     &_input {
       width: 100%;
       padding-top: 1rem;
@@ -25,7 +37,7 @@
     }
     &_submit {
       position: absolute;
-      right: 5rem;
+      right: 0rem;
       width: 12rem;
       padding-top: 1.1rem;
       padding-bottom: 1.1rem;
@@ -141,11 +153,6 @@
       padding-left: 2rem;
       padding-right: 2rem;
     }
-    &__form {
-      &_submit {
-        right: 2rem;
-      }
-    }
     &__flexContainer {
       column-gap: 1rem;
     }
@@ -163,6 +170,12 @@
 }
 
 @media (max-width: 767px) {
+  .defaultImg {
+    width: 100%;
+    height: auto;
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 1.2rem;
+  }
   .searchPage {
     &__container {
       padding: 0;
@@ -174,10 +187,9 @@
       &_input {
         font-size: 1.4rem;
         padding-left: 1rem;
-        padding-right: 3.5rem;
+        padding-right: 6.5rem;
       }
       &_submit {
-        right: 2rem;
         width: 6rem;
         padding-left: 1rem;
         padding-right: 1rem;
