create autoComplete in homepage

--- a/src/components/pages/homePage/homePage.scss
+++ b/src/components/pages/homePage/homePage.scss
@@ -67,6 +67,31 @@
         cursor: default;
       }
     }
+    &_autoComplete {
+      position: relative;
+      z-index: 1;
+      padding-left: 1.6rem;
+      padding-right: 1.4rem;
+      padding-bottom: 1rem;
+      li {
+        padding-left: 1.5rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+        font-weight: 700;
+        font-size: 1.5rem;
+        background-color: #c2bdbd;
+        border-top: 1px solid black;
+        &:hover {
+          cursor: pointer;
+          background-color: #8d8b8b;
+        }
+        a {
+          padding-right: 1.4rem;
+          display: inline-block;
+          width: 100%;
+        }
+      }
+    }
   }
   &__filmsSlider {
     align-self: center;
@@ -163,8 +188,6 @@
     }
     &_cards {
       position: relative;
-      //display: flex;
-      //flex-direction: column;
       border: 1px solid #e3e3e3;
       box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
       border-radius: 1.5rem;
