--- a/src/components/pages/homePage/homePage.scss
+++ b/src/components/pages/homePage/homePage.scss
@@ -92,6 +92,9 @@
         }
       }
     }
+    &_autoCompleteHidden {
+      display: none;
+    }
   }
   &__filmsSlider {
     align-self: center;
