--- a/src/components/pages/insidePage/insidePage.scss
+++ b/src/components/pages/insidePage/insidePage.scss
@@ -207,7 +207,7 @@
         border-top-left-radius: 1.5rem;
         border-top-right-radius: 1.5rem;
       }
-      h3 {
+      a {
         width: 19rem;
         margin-top: 1rem;
         margin-left: 0.5rem;
