--- a/src/components/pages/actorsPage/actorsPage.scss
+++ b/src/components/pages/actorsPage/actorsPage.scss
@@ -38,12 +38,15 @@
       border-top-left-radius: 1.2rem;
       border-top-right-radius: 1.2rem;
     }
-    h2 {
+    h3 {
       font-weight: 600;
       font-size: 1.6rem;
       margin-top: 3%;
       margin-left: 3%;
       margin-right: 3%;
+      &:hover {
+        text-decoration: underline;
+      }
     }
     li {
       margin-left: 3%;
