--- a/src/components/pages/insidePage/insidePage.scss
+++ b/src/components/pages/insidePage/insidePage.scss
@@ -110,6 +110,9 @@
       border: 1px solid #e3e3e3;
       box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
       border-radius: 1.5rem;
+      &:hover {
+        cursor: pointer;
+      }
       .defaultImg {
         width: 100%;
         height: 30rem;
@@ -122,12 +125,15 @@
         border-top-left-radius: 1.5rem;
         border-top-right-radius: 1.5rem;
       }
-      h3 {
+      a {
         margin-top: 1rem;
         margin-left: 0.5rem;
         margin-right: 0.5rem;
         font-weight: 700;
         font-size: 1.5rem;
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
   }
