--- a/src/components/pages/insidePage/insidePage.scss
+++ b/src/components/pages/insidePage/insidePage.scss
@@ -214,6 +214,7 @@
         border-top-right-radius: 1.5rem;
       }
       a {
+        display: block;
         width: 19rem;
         margin-top: 1rem;
         margin-left: 0.5rem;
