--- a/src/components/pages/homePage/homePage.scss
+++ b/src/components/pages/homePage/homePage.scss
@@ -130,21 +130,18 @@
       padding-top: 1rem;
     }
     &_cards {
-      height: 38rem;
-      border: 1px solid #e3e3e3;
-      box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
-      border-radius: 1.5rem;
+      //height: 38rem;
       &:hover {
         cursor: pointer;
       }
       .defaultImg {
         height: 30rem;
+        border-radius: 1.5rem;
       }
       img {
         width: 100%;
         height: 30rem;
-        border-top-left-radius: 1.5rem;
-        border-top-right-radius: 1.5rem;
+        border-radius: 1.5rem;
       }
       a {
         display: block;
