--- a/src/components/pages/insidePage/insidePage.scss
+++ b/src/components/pages/insidePage/insidePage.scss
@@ -105,7 +105,7 @@
       padding-top: 1rem;
     }
     &_card {
-      height: 34rem;
+      //height: 34rem;
       margin-top: 2rem;
       &:hover {
         cursor: pointer;
@@ -180,7 +180,7 @@
     }
     .slick-track {
       display: flex;
-      column-gap: 1rem;
+      column-gap: 1rem; 
     }
     .slick-dots {
       position: relative;
@@ -188,7 +188,7 @@
       padding-top: 1rem;
     }
     &_card {
-      height: 37rem;
+      //height: 37rem;
       margin-top: 2rem;
       &:hover {
         cursor: pointer;
