--- a/src/components/pages/insidePage/insidePage.scss
+++ b/src/components/pages/insidePage/insidePage.scss
@@ -4,24 +4,28 @@
   content: url(../../../resources/img/noImg.jpg);
 }
 
+.container {
+  max-width: 130rem;
+  width: 100%;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .insidePage {
-  &__container {
-    display: flex;
-    flex-direction: column;
-    max-width: 130rem;
-    margin-left: auto;
-    margin-right: auto;
-  }
   &__description {
+    background-repeat: no-repeat;
+    background-size: cover;
+    &_background {
+      background-image: linear-gradient(to right, rgba(31.5, 52.5, 73.5, 1) 150px, rgba(31.5, 52.5, 73.5, 0.84) 100%);
+    }
     &_flex {
       display: flex;
       column-gap: 4rem;
-      background-image: linear-gradient(to right, rgba(31.5, 52.5, 73.5, 1) 150px, rgba(31.5, 52.5, 73.5, 0.84) 100%);
       height: 57rem;
       padding-top: 3rem;
       padding-bottom: 3rem;
-      padding-left: 5rem;
-      padding-right: 5rem;
       &_textBlock {
         display: flex;
         flex-direction: column;
@@ -69,16 +73,9 @@
       }
     }
   }
-  &__background {
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
   &__actors {
     padding-top: 3rem;
     padding-bottom: 3rem;
-    padding-left: 5rem;
-    padding-right: 5rem;
     h2 {
       font-weight: 600;
       font-size: 2.4rem;
@@ -105,7 +102,6 @@
       padding-top: 1rem;
     }
     &_card {
-      //height: 34rem;
       margin-top: 2rem;
       &:hover {
         cursor: pointer;
@@ -133,8 +129,6 @@
     }
   }
   &__backdropsGallery {
-    margin-left: 5rem;
-    margin-right: 5rem;
     margin-bottom: 3rem;
     h2 {
       font-weight: 600;
@@ -160,8 +154,6 @@
   &__recommendations {
     padding-top: 3rem;
     padding-bottom: 3rem;
-    padding-left: 5rem;
-    padding-right: 5rem;
     h2 {
       font-weight: 600;
       font-size: 2.4rem;
@@ -188,7 +180,6 @@
       padding-top: 1rem;
     }
     &_card {
-      //height: 37rem;
       margin-top: 2rem;
       &:hover {
         cursor: pointer;
@@ -223,12 +214,14 @@
   .defaultImg {
     width: 40%;
   }
+  .container {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
   .insidePage {
     &__description {
       &_flex {
         column-gap: 2rem;
-        padding-left: 2rem;
-        padding-right: 2rem;
         height: auto;
         img {
           width: 40%;
@@ -241,12 +234,10 @@
     &__actors {
       padding-top: 2rem;
       padding-bottom: 2rem;
-      padding-left: 2.5rem;
-      padding-right: 2.5rem;
+      padding-left: 0.5rem;
+      padding-right: 0.5rem;
     }
     &__backdropsGallery {
-      margin-left: 2rem;
-      margin-right: 2rem;
       margin-bottom: 2rem;
       &_grid {
         grid-template-columns: repeat(2, 1fr);
@@ -255,8 +246,8 @@
     &__recommendations {
       padding-top: 2rem;
       padding-bottom: 2rem;
-      padding-left: 2.5rem;
-      padding-right: 2.5rem;
+      padding-left: 0.5rem;
+      padding-right: 0.5rem;
       .slick-track {
         column-gap: 1rem;
       }
@@ -272,6 +263,10 @@
 @media (max-width: 767px) {
   .defaultImg {
     width: 100%;
+  }
+  .container {
+    padding-left: 2.4rem;
+    padding-right: 2.4rem;
   }
   .insidePage {
     &__description {
